.provarCaches/00D5h000009Q6XQEA0/objects/provar__Release_Issue__c.object
<CustomObject>
    <fields>
        <fullName>provar__Issue__c</fullName>
        <label>Issue</label>
        <referenceTo>provar__Issue__c</referenceTo>
        <relationshipLabel>Related Releases</relationshipLabel>
        <relationshipName>Release_Issues</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>provar__Release__c</fullName>
        <label>Release</label>
        <referenceTo>provar__Release__c</referenceTo>
        <relationshipLabel>Issues in the Release</relationshipLabel>
        <relationshipName>Release_Issues</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>provar__Status_Is_Done__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Status Is Done</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>provar__Status_Is_In_Progress__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Status Is In Progress</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>provar__Status_Is_Not_Started__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Status Is Not Started</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>provar__Status__c</fullName>
        <label>Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Release Issue</label>
    <nameField>
        <displayFormat>RELI-{000000}</displayFormat>
        <label>Release Issue Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Release Issues</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>